Updated with all new icons

--- a/main/home.html
+++ b/main/home.html
@@ -17,7 +17,7 @@
         A work in progress, adding more mountains soon!
     </h2>
     <h3>
-        <a href="mountains/hirschalm.html">Hirschalm</a> | <a href="mountains/elnakka.html">Elnakka</a>
+        <a href="mountains/hirschalm.html">Hirschalm</a> | <a href="mountains/waldtal.html">Waldtal</a> | <a href="mountains/elnakka.html">Elnakka</a>
     </h3>
 </div>
 
